# airtable_databricks

./: .env.template  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: ingest.yml
script/: main.py
src/airtable_databricks_ingestion/: __init__.py  cli.py  config.py  scraper.py  uploader.py
tests/: conftest.py  test_config.py  test_scraper.py  test_uploader.py
