[project]
name = "airtable-databricks-ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cao Tri DO", email = "caotri.do88@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "snowflake-connector-python>=4.6.0",
]

[project.scripts]
airtable-databricks-ingestion = "airtable_databricks_ingestion:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

